# widetrax

./: .gitignore  .readthedocs.yaml  README.md  environment.yml  pyproject.toml  requirements.txt  widetrax.py
.github/workflows/: python-publish.yml
docs/: Examples.rst  Makefile  Medregion.rst  api.rst  conf.py  examples.rst  index.rst  medregion.rst  overview.rst  requirements.txt  trynewname.rst  widetrax.DataPreprocessing.rst  widetrax.Grads.rst  widetrax.Grids.rst  widetrax.Spectra.rst  widetrax.Spectram.rst  widetrax.rst
docs/source/: conf.py
docs/source/.ipynb_checkpoints/: conf-checkpoint.py  index-checkpoint.rst
notebooks/: Medregion.md  README.md  test1.ipynb
notebooks/Medregion/: Medregion.md
notebooks/Medregion_files/: Medregion.md
notebooks/medregion/: medregion.md
src/: DataPreprocessing.py  Spectram.py
widetrax/: DataPreprocessing.py  Grads.py  Spectra.py  Spectram.py  __init__.py  __main__.py
